# geoq

./: .git-blame-ignore-revs  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  grammar.pest  hetero.wkt  manual.md  todo.md
.github/workflows/: ci.yml
resources/: geojsonio_p1.html  geojsonio_p2.html
src/: geoq.pest  input.rs  main.rs
src/geoq/: bbox.rs  browser_open.rs  centroid.rs  contains.rs  coord_count.rs  distance.rs  dwithin.rs  entity.rs  error.rs  geohash.rs  geojson.rs  input.rs  intersection.rs  mod.rs  par.rs  parser.rs  pest_parser.rs  reader.rs  simplify.rs  text.rs
src/geoq/commands/: bbox.rs  centroid.rs  debug.rs  fgb.rs  filter.rs  geohash.rs  geojson.rs  geojson_cmd.rs  h3.rs  json.rs  map.rs  measure.rs  mod.rs  parse.rs  read.rs  shp.rs  simplify.rs  snip.rs  whereami.rs  wkt.rs
src/geoq/fgb/: bbox.rs  columns.rs  feature.rs  geometry.rs  header.rs  hilbert.rs  index.rs  mod.rs  properties.rs
tests/: cli_test.rs
tests/resources/: alabama500.geojson  countries.geojson  query_file.txt
