[package]
name = "geoq"
version = "0.0.20"
authors = ["Horace Williams <horace@worace.works>"]
license = "MIT"
description = "Geospatial utility CLI"
homepage = "https://github.com/worace/geoq"
repository = "https://github.com/worace/geoq"
documentation = "https://github.com/worace/geoq/blob/master/manual.md"
edition = "2018"

[dependencies]
clap = "2.31.2"
regex = "1.0.0"
once_cell = "1.4.0"
geo = "0.18.0"
geo-types = "0.7.2"
geohash = "0.12.0"
wkt = "0.9.2"
geojson = { version =  "0.22", features=["geo-types"] }
serde_json = "1.0.59"
percent-encoding = "1.0.1"
os_info = "2.0.6"
num_cpus = "1.0"
reqwest = "0.9.19"
shapefile = { version = "0.3.0", features=["geo-types"]}
dbase = "0.2.0"
# flatgeobuf = "0.6.2"
# flatgeobuf = { git = "https://github.com/worace/flatgeobuf", branch = "worace/debug" }
flatgeobuf = { path = "../flatgeobuf/src/rust" }
flatbuffers = "2.0.0"
geozero = "0.7.4"

[dev-dependencies]
assert_cli = "0.6.2"
